fixed spacing issues and font-size

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -125,6 +125,7 @@ video {
   text-align: left;
   padding: 6% 2% 2% 4% ;
   color: white;
+  text-shadow: 1px 1px 2px grey;
   font-family: "Raleway";
   width: 50%;
   height: 100%;
